update settings.json with vimbindings

--- a/settings.json
+++ b/settings.json
@@ -1,3 +1,51 @@
 {
-    "vim.useSystemClipboard": true
+    "vim.useSystemClipboard": true,
+    "vim.normalModeKeyBindings": [
+      {
+        "before": ["<C-h>"],
+        "after": ["^"]
+      },
+      {
+        "before": ["<C-l>"],
+        "after": ["$"]
+      },
+      {
+        "before": ["<up>"],
+        "after": ["<nop>"]
+      },
+      {
+        "before": ["<down>"],
+        "after": ["<nop>"]
+      },
+      {
+        "before": ["<left>"],
+        "after": ["<nop>"]
+      },
+      {
+        "before": ["<right>"],
+        "after": ["<nop>"]
+      }
+    ],
+    "vim.insertModeKeyBindings": [
+      {
+        "before": ["j", "j"],
+        "after": ["<Esc>"]
+      },
+      {
+        "before": ["<up>"],
+        "after": ["<nop>"]
+      },
+      {
+        "before": ["<down>"],
+        "after": ["<nop>"]
+      },
+      {
+        "before": ["<left>"],
+        "after": ["<nop>"]
+      },
+      {
+        "before": ["<right>"],
+        "after": ["<nop>"]
+      }
+    ]
 }
